--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./favicon-32x32.png">
-    <title>prasetia adiprakasa</title>
+    <title>Prasetia Adiprakasa</title>
   </head>
   <body>
     <div id="root"></div>
